Fix Hydrargyrum name for ru_RU.lang
Меркурий💀

--- a/src/main/resources/assets/minechem/lang/ru_RU.lang
+++ b/src/main/resources/assets/minechem/lang/ru_RU.lang
@@ -271,7 +271,7 @@ element.Ge=Германий
 element.H=Водород
 element.He=Гелий
 element.Hf=Гафний
-element.Hg=Меркурий
+element.Hg=Ртуть
 element.Ho=Гольмий
 element.Hs=Хассий
 element.I=Йод
@@ -742,7 +742,7 @@ fluid.element.Ge.name=Германий
 fluid.element.H.name=Водород
 fluid.element.He.name=Гелий
 fluid.element.Hf.name=Гафний
-fluid.element.Hg.name=Меркурий
+fluid.element.Hg.name=Ртуть
 fluid.element.Ho.name=Гольмий
 fluid.element.Hs.name=Хассий
 fluid.element.I.name=Йод
